# pointer_labs

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
lab1_core_concepts/: simple_declaration.cpp
lab2_types_of_pointer/array_pointer/: array_pointer.cpp
lab2_types_of_pointer/casted_pointer/: char_pointer_point_to_int64.cpp
lab2_types_of_pointer/function_pointer/: function_pointer.cpp  self_direct_function_pointer.cpp
lab2_types_of_pointer/void_pointer/: void_pointer.cpp
lab3_problems/dangling_pointer/: dangling.cpp
lab3_problems/memory_leak/: leak_fixed.cpp
lab3_problems/shared_pointer/: shared_pointer.cpp
lab4_usage/: e2_dynamic_initialization.cpp  e5_context_for_chained_handlers.cpp  e6_e5_on_steroid.cpp
problems_with_pointer/dangling_pointer/: dangling_fixed.cpp
problems_with_pointer/memory_leak/: leak.cpp  leak_fixed.cpp
types_of_pointers/casted_pointer/: char_pointer.cpp
usage/: e1_array_pointer.cpp  e2_dynamic_initialization.cpp  e3_reduce_argument_size.cpp  e4_remove_return_value.cpp
